# google-studio-skills

./: .gitignore  README.md  pyproject.toml
google-ai-studio/: SKILL.md  requirements.txt
google-ai-studio/scripts/: gemini_client.py
skills/gemini-batch/: SKILL.md
skills/gemini-batch/scripts/: check_status.py  create_batch.py  get_results.py
skills/gemini-embeddings/: SKILL.md
skills/gemini-embeddings/scripts/: embed.py
skills/gemini-files/: SKILL.md
skills/gemini-files/scripts/: upload.py
skills/gemini-image/: SKILL.md
skills/gemini-image/scripts/: generate_image.py
skills/gemini-text/: SKILL.md
skills/gemini-text/references/: models.md
skills/gemini-text/scripts/: generate.py
skills/gemini-tts/: SKILL.md
skills/gemini-tts/references/: voices.md
skills/gemini-tts/scripts/: tts.py
